<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.notima.generic.businessobjects.adapter</groupId>
	<artifactId>businessObjectAdapters</artifactId>
	<version>1.9.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<karaf.version>4.4.6</karaf.version>
		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
		<apache.poi.version>3.17</apache.poi.version>
		<notima-util.version>0.0.7</notima-util.version>
		<businessobjects.version>1.0.1-SNAPSHOT</businessobjects.version>
		<fortnox4j.version>2.0.2</fortnox4j.version>
		<gson.version>2.11.0</gson.version>
		<siefilelib.version>1.0.5</siefilelib.version>
		<commons-csv.version>1.6</commons-csv.version>
		<swish4j.version>0.0.4</swish4j.version>

		<!-- Belongs to sveaWebpayAdapter but must be here to be accessible to feature.xml -->		
		<pmt-admin-api.version>2.2.0-SNAPSHOT</pmt-admin-api.version>
		<webpayadminreports.version>0.0.9-SNAPSHOT</webpayadminreports.version>
		<webpay-common.version>0.0.9-SNAPSHOT</webpay-common.version>
		
	</properties>

	<modules>
		<module>fortnoxAdapter</module>
		<module>sveaWebpayAdapter</module>
		<module>ublAdapter</module>
		<module>infometricAdapter</module>
		<module>csvAdapter</module>
		<module>sieAdapter</module>
		<module>adapterTools</module>
		<module>jasperReportAdapter</module>
		<module>ratepayReportAdapter</module>
		<module>adempiereAdapter</module>
		<module>excelAdapter</module>
		<module>jasperFonts</module>
		<module>emailAdapter</module>
		<module>seBankingAdapter</module>
		<module>p27bankingAdapter</module>
		<module>jsonAdapter</module>
		<module>adyenAdapter</module>
		<module>adapterPersistence</module>
		<module>time4uAdapter</module>
	</modules>

	<dependencyManagement>
	
		<dependencies>
		
			<dependency>
				<groupId>org.notima.generic</groupId>
				<artifactId>businessobjects</artifactId>
				<version>${businessobjects.version}</version>
			</dependency>
		
	  		<dependency>
	  			<groupId>com.svea</groupId>
	  			<artifactId>webpay-common</artifactId>
	  			<version>${webpay-common.version}</version>
	  		</dependency>
		
		</dependencies>
	
	</dependencyManagement>

	<dependencies>

        <dependency>
            <groupId>org.osgi</groupId>
            <artifactId>osgi.core</artifactId>
            <version>6.0.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.osgi</groupId>
            <artifactId>osgi.cmpn</artifactId>
            <version>6.0.0</version>
            <scope>provided</scope>
        </dependency>
        
	    <dependency>
	    	<groupId>org.apache.karaf</groupId>
	    	<artifactId>org.apache.karaf.util</artifactId>
	    	<version>${karaf.version}</version>
	    </dependency>

        <dependency>
            <groupId>org.apache.karaf.shell</groupId>
            <artifactId>org.apache.karaf.shell.core</artifactId>
            <version>${karaf.version}</version>
        </dependency>

		<dependency>
			<groupId>org.notima.generic</groupId>
			<artifactId>businessobjects</artifactId>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.1</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>5.10.1</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.13</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
					<stagingProgressTimeoutMinutes>25</stagingProgressTimeoutMinutes>
					<keepStagingRepositoryOnCloseRuleFailure>true</keepStagingRepositoryOnCloseRuleFailure>
					<keepStagingRepositoryOnFailure>true</keepStagingRepositoryOnFailure>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<includes>
						<include>**/AllTests.java</include>
					</includes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>deploy</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<description>A collection of adapters used to convert between ERP:s and common format 
https://github.com/notima/businessobjects</description>

	<organization>
		<name>Ekonomibolaget Notima AB</name>
		<url>https://github.com/notima</url>
	</organization>
	<scm>
		<url>https://github.com/notima/businessObjectAdapters</url>
		<connection>scm:git:git://github.com/notima/businessObjectAdapters.git</connection>
		<developerConnection>Daniel Tamm</developerConnection>
	</scm>
	<issueManagement>
		<url>https://github.com/notima/businessObjectAdapters/issues</url>
		<system>Github Issues</system>
	</issueManagement>
	<inceptionYear>2012</inceptionYear>
	<url>https://github.com/notima/businessObjectAdapters</url>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Daniel Tamm</name>
			<email>daniel@notima.se</email>
			<organization>Ekonomibolaget Notima AB</organization>
			<organizationUrl>https://github.com/notima</organizationUrl>
		</developer>
	</developers>

	<name>Business Object Adapters</name>
</project>
